done with the add to cart functionality, making other changes

--- a/product.html
+++ b/product.html
@@ -37,17 +37,7 @@
                     <h2 class="cart-title">Your Cart</h2>
                     <!-- Content -->
                     <div class="cart-content">
-
-                        <div class="cart-box">
-                            <img src="./img/3WhiteRockandRole.jpg" alt="" class="cart-img" >
-                            <div class="detail-box">
-                                <div class="cart-product-title">A Month Music Promotion</div>
-                                <div class="cart-price">₦1200000.20</div>
-                                <input type="number" value="1" class="cart-quantity">
-                            </div>
-                            <!-- Remove Cart -->
-                            <i class="bx-bxs-trash-alt cart-remove">re</i>
-                        </div>
+ 
                     </div>
                     <!-- Total -->
                     <div class="total">
@@ -55,7 +45,7 @@
                         <div class="total-price">₦</div>
                     </div>
                     <!-- Buy Button -->
-                    <button type="button" class="btn-buy">Buy Now</button>
+                    <button type="button" class="btn-buy"><span><a href="https://www.instagram.com/emmanuel.9944/">Buy Now</a></span></button>
                     <!-- Cart Close -->
                     <i class="bx bx-x" id="close-cart">X</i>
                 </div>
@@ -96,7 +86,7 @@
 
     <!-- The Products section starts  -->
 
-    
+
 
     <section id="products" class="products">
         <div class="container-fluid">
@@ -104,45 +94,50 @@
 
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
 
-                    <a href=""><img src="./img/2adidas.jpg" alt="Products" width="100%" height="430px" class="product-img"></a>
+
                     <div class="productTalk">
+                        <a href=""><img src="./img/2adidas.jpg" alt="Products" width="100%" height="430px"
+                                class="product-img"></a>
                         <h4 class="product-title">Client Content Post on Page</h4>
                         <p>ADVERT</p>
                         <hr>
-                        <h6 class="price">₦250,000.00</h6>
+                        <h6 class="price">₦250000.00</h6>
                         <span></span>
                         <i class="bx bx-shopping-bag add-cart" id="cart-icon">cart</i>
                     </div>
                 </div>
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
-                    <a href=""><img src="./img/3WhiteRockandRole.jpg" alt="Products" width="100%" height="430px" class="product-img"></a>
                     <div class="productTalk">
+                        <a href=""><img src="./img/3WhiteRockandRole.jpg" alt="Products" width="100%" height="430px"
+                                class="product-img"></a>
                         <h4 class="product-title">My Content on Story</h4>
                         <p>ADVERT</p>
                         <hr>
-                        <h6 class="price">₦150,000.00</h6>
+                        <h6 class="price">₦150000.00</h6>
                         <span></span>
                         <i class="bx bx-shopping-bag add-cart" id="cart-icon">cart</i>
                     </div>
                 </div>
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
-                    <a href=""><img src="./img/2NEWSWAGY.jpeg" alt="Products" width="100%" height="430px" class="product-img"></a>
                     <div class="productTalk">
+                        <a href=""><img src="./img/2NEWSWAGY.jpeg" alt="Products" width="100%" height="430px"
+                                class="product-img"></a>
                         <h4 class="product-title">Insta Story</h4>
                         <p>ADVERT</p>
                         <hr>
-                        <h6 class="price">₦40,000.00</h6>
+                        <h6 class="price">₦40000.00</h6>
                         <span></span>
                         <i class="bx bx-shopping-bag add-cart" id="cart-icon">cart</i>
                     </div>
                 </div>
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
-                    <a href=""><img src="./img/1Nike.jpeg" alt="Products" width="100%" height="430px" class="product-img"></a>
                     <div class="productTalk">
+                        <a href=""><img src="./img/1Nike.jpeg" alt="Products" width="100%" height="430px"
+                                class="product-img"></a>
                         <h4 class="product-title">My Video/Picture Content on <br> Page</h4>
                         <p>ADVERT</p>
                         <hr>
-                        <h6 class="price">₦370,000.00</h6>
+                        <h6 class="price">₦370000.00</h6>
                         <span></span>
                         <i class="bx bx-shopping-bag add-cart" id="cart-icon">cart</i>
                     </div>
@@ -150,45 +145,49 @@
 
 
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
-                    <a href=""><img src="./img/2adidas.jpg" alt="Products" width="100%" height="430px" class="product-img"></a>
                     <div class="productTalk">
+                        <a href=""><img src="./img/2adidas.jpg" alt="Products" width="100%" height="430px"
+                                class="product-img"></a>
                         <h4 class="product-title">A Post wearing any of your <br> Products</h4>
                         <p>ADVERT,INFLUENCING</p>
                         <hr>
-                        <h6 class="price">₦100,000.00</h6>
+                        <h6 class="price">₦100000.00</h6>
                         <span></span>
                         <i class="bx bx-shopping-bag add-cart" id="cart-icon">cart</i>
                     </div>
                 </div>
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
-                    <a href=""><img src="./img/3WhiteRockandRole.jpg" alt="Products" width="100%" height="430px" class="product-img"></a>
                     <div class="productTalk">
+                        <a href=""><img src="./img/3WhiteRockandRole.jpg" alt="Products" width="100%" height="430px"
+                                class="product-img"></a>
                         <h4 class="product-title">Campaign Shoot(Video/Photo)</h4>
                         <p>INFLUENCING</p>
                         <hr>
-                        <h6 class="price">₦500,000.00</h6>
+                        <h6 class="price">₦500000.00</h6>
                         <span></span>
                         <i class="bx bx-shopping-bag add-cart" id="cart-icon">cart</i>
                     </div>
                 </div>
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
-                    <a href=""><img src="./img/2NEWSWAGY.jpeg" alt="Products" width="100%" height="430px" class="product-img"></a>
                     <div class="productTalk">
+                        <a href=""><img src="./img/2NEWSWAGY.jpeg" alt="Products" width="100%" height="430px"
+                                class="product-img"></a>
                         <h4 class="product-title">Snap Story Advert</h4>
                         <p>ADVERT</p>
                         <hr>
-                        <h6 class="price">₦30,000.00</h6>
+                        <h6 class="price">₦30000.00</h6>
                         <span></span>
                         <i class="bx bx-shopping-bag add-cart" id="cart-icon">cart</i>
                     </div>
                 </div>
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
-                    <a href=""><img src="./img/1Nike.jpeg" alt="Products" width="100%" height="430px" class="product-img"></a>
                     <div class="productTalk">
+                        <a href=""><img src="./img/1Nike.jpeg" alt="Products" width="100%" height="430px"
+                                class="product-img"></a>
                         <h4 class="product-title">Snapchat 1 month influencing <br> (First Package)</h4>
                         <p>ADVERT</p>
                         <hr>
-                        <h6 class="price">₦700,000.00</h6>
+                        <h6 class="price">₦700000.00</h6>
                         <span></span>
                         <i class="bx bx-shopping-bag add-cart" id="cart-icon">cart</i>
                     </div>
@@ -196,45 +195,49 @@
 
 
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
-                    <a href=""><img src="./img/2adidas.jpg" alt="Products" width="100%" height="430px" class="product-img"></a>
                     <div class="productTalk">
+                        <a href=""><img src="./img/2adidas.jpg" alt="Products" width="100%" height="430px"
+                                class="product-img"></a>
                         <h4 class="product-title">Twitter 1 week </h4>
                         <p>ADVERT,INFLUENCING,PROMOTION</p>
                         <hr>
-                        <h6 class="price">₦100,000.00</h6>
+                        <h6 class="price">₦100000.00</h6>
                         <span></span>
                         <i class="bx bx-shopping-bag add-cart" id="cart-icon">cart</i>
                     </div>
                 </div>
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
-                    <a href=""><img src="./img/3WhiteRockandRole.jpg" alt="Products" width="100%" height="430px" class="product-img"></a>
                     <div class="productTalk">
+                        <a href=""><img src="./img/3WhiteRockandRole.jpg" alt="Products" width="100%" height="430px"
+                                class="product-img"></a>
                         <h4 class="product-title">Twitter 1 day(2-3 tweets)</h4>
                         <p>ADVERT,INFLUENCING,PROMOTION</p>
                         <hr>
-                        <h6 class="price">₦24,000.00</h6>
+                        <h6 class="price">₦24000.00</h6>
                         <span></span>
                         <i class="bx bx-shopping-bag add-cart" id="cart-icon">cart</i>
                     </div>
                 </div>
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
-                    <a href=""><img src="./img/2NEWSWAGY.jpeg" alt="Products" width="100%" height="430px" class="product-img"></a>
                     <div class="productTalk">
+                        <a href=""><img src="./img/2NEWSWAGY.jpeg" alt="Products" width="100%" height="430px"
+                                class="product-img"></a>
                         <h4 class="product-title">1 Month Influencing Package</h4>
                         <p>INFLUENCING</p>
                         <hr>
-                        <h6 class="price">₦750,000.00</h6>
+                        <h6 class="price">₦750000.00</h6>
                         <span></span>
                         <i class="bx bx-shopping-bag add-cart" id="cart-icon">cart</i>
                     </div>
                 </div>
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
-                    <a href=""><img src="./img/1Nike.jpeg" alt="Products" width="100%" height="430px" class="product-img"></a>
                     <div class="productTalk">
+                        <a href=""><img src="./img/1Nike.jpeg" alt="Products" width="100%" height="430px"
+                                class="product-img"></a>
                         <h4 class="product-title">Snapchat 1 month influencing <br>(Second Package)</h4>
                         <p>ADVERT</p>
                         <hr>
-                        <h6 class="price">₦650,000.00</h6>
+                        <h6 class="price">₦650000.00</h6>
                         <span></span>
                         <i class="bx bx-shopping-bag add-cart" id="cart-icon">cart</i>
                     </div>
@@ -242,45 +245,49 @@
 
 
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
-                    <a href=""><img src="./img/2adidas.jpg" alt="Products" width="100%" height="430px" class="product-img"></a>
                     <div class="productTalk">
+                        <a href=""><img src="./img/2adidas.jpg" alt="Products" width="100%" height="430px"
+                                class="product-img"></a>
                         <h4 class="product-title">A month Music Promotion</h4>
                         <p>PROMOTION</p>
                         <hr>
-                        <h6 class="price">₦1,200,000.00</h6>
+                        <h6 class="price">₦1200000.00</h6>
                         <span></span>
                         <i class="bx bx-shopping-bag add-cart" id="cart-icon">cart</i>
                     </div>
                 </div>
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
-                    <a href=""><img src="./img/3WhiteRockandRole.jpg" alt="Products" width="100%" height="430px" class="product-img"></a>
                     <div class="productTalk">
+                        <a href=""><img src="./img/3WhiteRockandRole.jpg" alt="Products" width="100%" height="430px"
+                                class="product-img"></a>
                         <h4 class="product-title">Music Promotion(TikTok)</h4>
                         <p>PROMOTION</p>
                         <hr>
-                        <h6 class="price">₦80,000.00</h6>
+                        <h6 class="price">₦80000.00</h6>
                         <span></span>
                         <i class="bx bx-shopping-bag add-cart" id="cart-icon">cart</i>
                     </div>
                 </div>
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
-                    <a href=""><img src="./img/2NEWSWAGY.jpeg" alt="Products" width="100%" height="430px" class="product-img"></a>
                     <div class="productTalk">
+                        <a href=""><img src="./img/2NEWSWAGY.jpeg" alt="Products" width="100%" height="430px"
+                                class="product-img"></a>
                         <h4 class="product-title">Music Promotion(Triller)</h4>
                         <p>PROMOTION</p>
                         <hr>
-                        <h6 class="price">₦50,000.00</h6>
+                        <h6 class="price">₦50000.00</h6>
                         <span></span>
                         <i class="bx bx-shopping-bag add-cart" id="cart-icon">cart</i>
                     </div>
                 </div>
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
-                    <a href=""><img src="./img/1Nike.jpeg" alt="Products" width="100%" height="430px" class="product-img"></a>
                     <div class="productTalk">
+                        <a href=""><img src="./img/1Nike.jpeg" alt="Products" width="100%" height="430px"
+                                class="product-img"></a>
                         <h4 class="product-title">Music Promotion(Instagram)</h4>
                         <p>PROMOTION</p>
                         <hr>
-                        <h6 class="price">₦350,000.00</h6>
+                        <h6 class="price">₦350000.00</h6>
                         <span></span>
                         <i class="bx bx-shopping-bag add-cart" id="cart-icon">cart</i>
                     </div>
