done with all the images in products.html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 
     <section id="header">
-        <a href="#"><img src="./img/1Nike.jpeg" class="logo" height="35" width="40" alt=""></a>
+        <a href="#"><img src="./img/1Nike.jpeg" class="logo" height="55" width="45" alt=""></a>
 
         <div>
             <ul id="navbar">
@@ -56,7 +56,7 @@
                     <button type="button" class="btn-buy"><span><a href="https://www.instagram.com/emmanuel.9944/">Buy
                                 Now</a></span></button>
                     <!-- Cart Close -->
-                    <i class="bx bx-x" id="close-cart">X</i>
+                    <i class="bx bx-x" id="close-cart"></i>
                 </div>
             </ul>
         </div>
@@ -182,7 +182,7 @@
             <div class="row">
 
                 <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6">
-                    <img src="./img/bannerButton.jpg" width="100%" height="680px" alt="">
+                    <img src="./img/familiar2.jpg" width="100%" height="680px" alt="">
                 </div>
                 <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6">
                     <h6>WHO IS JAY?</h6>
