--- a/product.html
+++ b/product.html
@@ -34,7 +34,7 @@
     <!-- Navbar section starts  -->
 
     <section id="header">
-        <a href="#"><img src="./img/1Nike.jpeg" class="logo" height="20" width="40" alt=""></a>
+        <a href="#"><img src="./img/1Nike.jpeg" class="logo" height="55" width="45" alt=""></a>
 
         <div>
             <ul id="navbar">
@@ -58,7 +58,7 @@
                     <button type="button" class="btn-buy"><span><a href="https://www.instagram.com/emmanuel.9944/">Buy
                                 Now</a></span></button>
                     <!-- Cart Close -->
-                    <i class="bx bx-x" id="close-cart">X</i>
+                    <i class="bx bx-x" id="close-cart"></i>
                 </div>
             </ul>
         </div>
@@ -117,7 +117,7 @@
 
 
                     <div class="productTalk">
-                        <a href=""><img src="./img/2adidas.jpg" alt="Products" width="100%" height="430px"
+                        <a href=""><img src="./img/1.png" alt="Products" width="100%" height="300px"
                                 class="product-img"></a>
                         <h4 class="product-title">Client Content Post on Page</h4>
                         <p>ADVERT</p>
@@ -129,7 +129,7 @@
                 </div>
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
                     <div class="productTalk">
-                        <a href=""><img src="./img/3WhiteRockandRole.jpg" alt="Products" width="100%" height="430px"
+                        <a href=""><img src="./img/2.png" alt="Products" width="100%" height="300px"
                                 class="product-img"></a>
                         <h4 class="product-title">My Content on Story</h4>
                         <p>ADVERT</p>
@@ -141,7 +141,7 @@
                 </div>
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
                     <div class="productTalk">
-                        <a href=""><img src="./img/2NEWSWAGY.jpeg" alt="Products" width="100%" height="430px"
+                        <a href=""><img src="./img/3.png" alt="Products" width="100%" height="300px"
                                 class="product-img"></a>
                         <h4 class="product-title">Insta Story</h4>
                         <p>ADVERT</p>
@@ -153,7 +153,7 @@
                 </div>
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
                     <div class="productTalk">
-                        <a href=""><img src="./img/1Nike.jpeg" alt="Products" width="100%" height="430px"
+                        <a href=""><img src="./img/4.png" alt="Products" width="100%" height="300px"
                                 class="product-img"></a>
                         <h4 class="product-title">My Video/Picture Content on <br> Page</h4>
                         <p>ADVERT</p>
@@ -167,7 +167,7 @@
 
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
                     <div class="productTalk">
-                        <a href=""><img src="./img/2adidas.jpg" alt="Products" width="100%" height="430px"
+                        <a href=""><img src="./img/aPostWearing.png" alt="Products" width="100%" height="300px"
                                 class="product-img"></a>
                         <h4 class="product-title">A Post wearing any of your <br> Products</h4>
                         <p>ADVERT,INFLUENCING</p>
@@ -179,7 +179,7 @@
                 </div>
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
                     <div class="productTalk">
-                        <a href=""><img src="./img/3WhiteRockandRole.jpg" alt="Products" width="100%" height="430px"
+                        <a href=""><img src="./img/campaign.png" alt="Products" width="100%" height="300px"
                                 class="product-img"></a>
                         <h4 class="product-title">Campaign Shoot(Video/Photo)</h4>
                         <p>INFLUENCING</p>
@@ -191,7 +191,7 @@
                 </div>
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
                     <div class="productTalk">
-                        <a href=""><img src="./img/2NEWSWAGY.jpeg" alt="Products" width="100%" height="430px"
+                        <a href=""><img src="./img/snapStory.png" alt="Products" width="100%" height="300px"
                                 class="product-img"></a>
                         <h4 class="product-title">Snap Story Advert</h4>
                         <p>ADVERT</p>
@@ -203,7 +203,7 @@
                 </div>
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
                     <div class="productTalk">
-                        <a href=""><img src="./img/1Nike.jpeg" alt="Products" width="100%" height="430px"
+                        <a href=""><img src="./img/snapChatMonth.png" alt="Products" width="100%" height="300px"
                                 class="product-img"></a>
                         <h4 class="product-title">Snapchat 1 month influencing <br> (First Package)</h4>
                         <p>ADVERT</p>
@@ -217,7 +217,7 @@
 
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
                     <div class="productTalk">
-                        <a href=""><img src="./img/2adidas.jpg" alt="Products" width="100%" height="430px"
+                        <a href=""><img src="./img/twitter1Week.png" alt="Products" width="100%" height="300px"
                                 class="product-img"></a>
                         <h4 class="product-title">Twitter 1 week </h4>
                         <p>ADVERT,INFLUENCING,PROMOTION</p>
@@ -229,7 +229,7 @@
                 </div>
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
                     <div class="productTalk">
-                        <a href=""><img src="./img/3WhiteRockandRole.jpg" alt="Products" width="100%" height="430px"
+                        <a href=""><img src="./img/Twitter(2-3).png" alt="Products" width="100%" height="300px"
                                 class="product-img"></a>
                         <h4 class="product-title">Twitter 1 day(2-3 tweets)</h4>
                         <p>ADVERT,INFLUENCING,PROMOTION</p>
@@ -241,7 +241,7 @@
                 </div>
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
                     <div class="productTalk">
-                        <a href=""><img src="./img/2NEWSWAGY.jpeg" alt="Products" width="100%" height="430px"
+                        <a href=""><img src="./img/1MonthInfluencing.png" alt="Products" width="100%" height="300px"
                                 class="product-img"></a>
                         <h4 class="product-title">1 Month Influencing Package</h4>
                         <p>INFLUENCING</p>
@@ -253,7 +253,7 @@
                 </div>
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
                     <div class="productTalk">
-                        <a href=""><img src="./img/1Nike.jpeg" alt="Products" width="100%" height="430px"
+                        <a href=""><img src="./img/snapChatMonth.png" alt="Products" width="100%" height="300px"
                                 class="product-img"></a>
                         <h4 class="product-title">Snapchat 1 month influencing <br>(Second Package)</h4>
                         <p>ADVERT</p>
@@ -267,7 +267,7 @@
 
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
                     <div class="productTalk">
-                        <a href=""><img src="./img/2adidas.jpg" alt="Products" width="100%" height="430px"
+                        <a href=""><img src="./img/aMonthMusicPromo.png" alt="Products" width="100%" height="300px"
                                 class="product-img"></a>
                         <h4 class="product-title">A month Music Promotion</h4>
                         <p>PROMOTION</p>
@@ -279,7 +279,7 @@
                 </div>
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
                     <div class="productTalk">
-                        <a href=""><img src="./img/3WhiteRockandRole.jpg" alt="Products" width="100%" height="430px"
+                        <a href=""><img src="./img/musicPromoTiktok.png" alt="Products" width="100%" height="300px"
                                 class="product-img"></a>
                         <h4 class="product-title">Music Promotion(TikTok)</h4>
                         <p>PROMOTION</p>
@@ -291,7 +291,7 @@
                 </div>
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
                     <div class="productTalk">
-                        <a href=""><img src="./img/2NEWSWAGY.jpeg" alt="Products" width="100%" height="430px"
+                        <a href=""><img src="./img/musicPromoTriller.png" alt="Products" width="100%" height="300px"
                                 class="product-img"></a>
                         <h4 class="product-title">Music Promotion(Triller)</h4>
                         <p>PROMOTION</p>
@@ -303,7 +303,7 @@
                 </div>
                 <div class="col-md-3 col-xs-3 col-sm-3 col-lg-3">
                     <div class="productTalk">
-                        <a href=""><img src="./img/1Nike.jpeg" alt="Products" width="100%" height="430px"
+                        <a href=""><img src="./img/musicPromoInsta.png" alt="Products" width="100%" height="300px"
                                 class="product-img"></a>
                         <h4 class="product-title">Music Promotion(Instagram)</h4>
                         <p>PROMOTION</p>
