--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
     <!-- Navbar section starts  -->
 
     <section id="header">
-        <a href="#"><img src="./img/1Nike.jpeg" class="logo" height="20" width="40" alt=""></a>
+        <a href="#"><img src="./img/1Nike.jpeg" class="logo" height="55" width="45" alt=""></a>
 
         <div>
             <ul id="navbar">
@@ -53,7 +53,7 @@
                     <!-- Buy Button -->
                     <button type="button" class="btn-buy"><span><a href="https://www.instagram.com/emmanuel.9944/">Buy Now</a></span></button>
                     <!-- Cart Close -->
-                    <i class="bx bx-x" id="close-cart">X</i>
+                    <i class="bx bx-x" id="close-cart"></i>
                 </div>
             </ul>
         </div>
